core/src/main/java/com/example/core/domain/model/error/AppError.kt
package com.example.core.domain.model.error

abstract class AppError : Exception()